# rosalind-solutions-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: rosalind-tests.yml  rust-ci.yml
src/: cli.rs  dna.rs  gc.rs  hamm.rs  lib.rs  main.rs  prot.rs  revc.rs  rna.rs  subs.rs
tests/: test_dna.rs  test_gc.rs  test_hamm.rs  test_prot.rs  test_revc.rs  test_rna.rs  test_subs.rs
